--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
   <link rel="stylesheet" href="css/glightbox.min.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
