--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <!--end font -->
 
 
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/tiny-slider.css">
-  <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
-  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="flaticon.css">
+  <link rel="stylesheet" href="tiny-slider.css">
+  <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+  <link rel="stylesheet" href="glightbox.min.css">
+  <link rel="stylesheet" href="aos.css">
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -129,7 +129,7 @@
     </div>
   </nav>
 
-  <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+  <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-center">
@@ -153,7 +153,7 @@
         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100"
           data-aos-duration="1000">
           <div class="img w-100 "
-            style="background-image: url(images/WhatsApp\ Image\ 2025-05-01\ at\ 2.39.09\ AM.jpeg);">
+            style="background-image: url(WhatsApp\ Image\ 2025-05-01\ at\ 2.39.09\ AM.jpeg);">
 
           </div>
         </div>
@@ -215,7 +215,7 @@
   </section>
 
   <section class="ftco-section-counter img"
-    style="background-image: url(images/f1697fab-6c5a-4b51-bfcc-692f2de79632.jpg);">
+    style="background-image: url(f1697fab-6c5a-4b51-bfcc-692f2de79632.jpg);">
     <div class="overlay"></div>
     <div class="container">
       <div class="row section-counter">
@@ -359,7 +359,7 @@
           <div class="col-md-6 col-lg-6 d-flex">
             <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
               data-aos-delay="100">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/المدير.jpeg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('المدير.jpeg');">
               </a>
               <div class="text">
                 <h4 class=" meta "><span> كلمة رئيس مجلس الاداره</span></h4>
@@ -382,7 +382,7 @@
           <div class="col-md-6 col-lg-6 d-flex">
             <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
               data-aos-delay="100">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/العميد.jpeg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('العميد.jpeg');">
               </a>
               <div class="text">
                 <h4 class=" meta "><span> كلمة العميد</span></h4>
