--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
   <!--start font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-md col-xl-5 d-flex align-items-center">
 
-          <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+          <img src="institute_logo_transparent.png" width="85px" height="85px">
 
         </div>
         <div class="col-md d-flex justify-content-end align-items-center">
@@ -492,16 +492,16 @@
 
 
 
-  <script src="js/fontawesome/all.min.js"></script>
+  <script src="fontawesome/all.min.js"></script>
 
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/tiny-slider.js"></script>
-  <script src="js/glightbox.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="tiny-slider.js"></script>
+  <script src="glightbox.min.js"></script>
+  <script src="aos.js"></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="google-map.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
