--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
   <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
   <!--start font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/tiny-slider.css">
-  <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="flaticon.css">
+  <link rel="stylesheet" href="tiny-slider.css">
+  <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+  <link rel="stylesheet" href="glightbox.min.css">
+  <link rel="stylesheet" href="aos.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body,
     .ftco-footer {
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md col-xl-5 d-flex align-items-center">
 
-          <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+          <img src="institute_logo_transparent.png" width="85px" height="85px">
 
         </div>
         <div class="col-md d-flex justify-content-end align-items-center">
@@ -127,7 +127,7 @@
     </div>
   </nav>
 
-  <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+  <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-center">
@@ -150,7 +150,7 @@
         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100"
           data-aos-duration="1000">
           <div class="img w-100 "
-            style="background-image: url(images/WhatsApp\ Image\ 2025-05-01\ at\ 2.39.09\ AM.jpeg);">
+            style="background-image: url(WhatsApp\ Image\ 2025-05-01\ at\ 2.39.09\ AM.jpeg);">
           </div>
         </div>
         <div class="col-md-6 heading-section d-flex align-items-center" data-aos="fade-up" data-aos-delay="200"
@@ -228,7 +228,7 @@
         <div class="col-md-6 col-lg-4 d-flex">
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
-            <a href="blog-single.html" class="block-20 img" style="background-image: url('images/علي\ سمير\ 3.jpeg');">
+            <a href="blog-single.html" class="block-20 img" style="background-image: url('علي\ سمير\ 3.jpeg');">
             </a>
             <div class="text">
               <h4 class=" meta "><span> كلمة الوكيل</span></h4>
@@ -245,7 +245,7 @@
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
             <a href="blog-single.html" class="block-20 img"
-              style="background-image: url('images/الامين\ العام.jpeg ');">
+              style="background-image: url('الامين\ العام.jpeg ');">
             </a>
             <div class="text">
               <h4 class=" meta "><span> كلمة الامين العام</span></h4>
@@ -261,7 +261,7 @@
         <div class="col-md-6 col-lg-4 d-flex">
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
-            <a href="blog-single.html" class="block-20 img" style="background-image: url('images/محمد\ عبدالرحمن.jpeg');">
+            <a href="blog-single.html" class="block-20 img" style="background-image: url('محمد\ عبدالرحمن.jpeg');">
             </a>
             <div class="text">
               <h4 class=" meta "><span>كلمه رئيس قسم الالكترونيات</span></h4>
@@ -277,7 +277,7 @@
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
             <a href="blog-single.html" class="block-20 img"
-              style="background-image: url('images/اسماعيل\ 2222.jpeg ');">
+              style="background-image: url('اسماعيل\ 2222.jpeg ');">
             </a>
             <div class="text">
               <h4 class=" meta "><span> كلمة رئيس قسم مدني </span></h4>
@@ -294,7 +294,7 @@
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
             <a href="blog-single.html" class="block-20 img"
-              style="background-image: url('images/طارق\ ابو\ عوف.jpeg');">
+              style="background-image: url('طارق\ ابو\ عوف.jpeg');">
             </a>
             <div class="text">
               <h4 class=" meta "><span>كلمة رئيس قسم عماره </span></h4>
@@ -311,7 +311,7 @@
         <div class="col-md-6 col-lg-4 d-flex">
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
-            <a href="blog-single.html" class="block-20 img" style="background-image: url('images/احمد\ الشريف.jpeg');">
+            <a href="blog-single.html" class="block-20 img" style="background-image: url('احمد\ الشريف.jpeg');">
             </a>
             <div class="text">
               <h4 class=" meta "><span> كلمه المشرف العام للمشروع</span></h4>
@@ -419,16 +419,16 @@
 
 
 
-  <script src="js/fontawesome/all.min.js"></script>
+  <script src="fontawesome/all.min.js"></script>
 
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/tiny-slider.js"></script>
-  <script src="js/glightbox.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="tiny-slider.js"></script>
+  <script src="glightbox.min.js"></script>
+  <script src="aos.js"></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="google-map.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
