--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link active" href="index.html">الرئيسيه</a></li>
-          <li class="nav-item"><a class="nav-link" href="/courses.html">عن المعهد</a></li>
+          <li class="nav-item"><a class="nav-link" href="courses.html">عن المعهد</a></li>
           <li class="nav-item dropdown"><a class="nav-link" href="team.html">اقسام المعهد</a>
 
             <ul class="dropdown-menu">
