--- a/blog-single.html
+++ b/blog-single.html
@@ -5,7 +5,7 @@
   <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
   <!--start font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/tiny-slider.css">
-  <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="flaticon.css">
+  <link rel="stylesheet" href="tiny-slider.css">
+  <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+  <link rel="stylesheet" href="glightbox.min.css">
+  <link rel="stylesheet" href="aos.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body,
     .ftco-footer {
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-md col-xl-5 d-flex align-items-center">
 
-          <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+          <img src="institute_logo_transparent.png" width="85px" height="85px">
 
         </div>
         <div class="col-md d-flex justify-content-end align-items-center">
@@ -201,7 +201,7 @@
           <h2 class="mb-3">د/ محمد عبدالرحمن</h2>
           <p>رئيس قسم الالكترونيات</p>
           <p>
-            <img src="images/محمد عبدالرحمن.jpeg" alt="" class="img-fluid">
+            <img src="محمد عبدالرحمن.jpeg" alt="" class="img-fluid">
           </p>
           <h4>كلمه : د/ محمد عبدالرحمن</h4>
           <p>يضم قسم الالكترونيات شعبتى الاتصالات والحاسبات والقسم يمتلك معامل متطورة وحديثة بالاضافة الى كوادر
@@ -270,7 +270,7 @@
 
           </p>
           <p>
-            <img src="images/الانظمه المدمجه.jpeg" alt="" class="img-fluid">
+            <img src="الانظمه المدمجه.jpeg" alt="" class="img-fluid">
           </p>
         </div>
 
@@ -288,7 +288,7 @@
             الشركات التقنية.
           </p>
           <p>
-            <img src="images/معمل حاسبات2.jpg" alt="" class="img-fluid">
+            <img src="معمل حاسبات2.jpg" alt="" class="img-fluid">
           </p>
         </div>
 
@@ -302,7 +302,7 @@
 
           </p>
           <p>
-            <img src="images/معمل الفيزياء 2.jpeg" alt="" class="img-fluid">
+            <img src="معمل الفيزياء 2.jpeg" alt="" class="img-fluid">
           </p>
         </div>
 
@@ -316,7 +316,7 @@
             لاخذ كل المواد العلميه في سكاشن اتصالات
           </p>
           <p>
-            <img src="images/معمل حاسب 1.jpg" alt="" class="img-fluid">
+            <img src="معمل حاسب 1.jpg" alt="" class="img-fluid">
           </p>
         </div>
 
@@ -327,7 +327,7 @@
             لاخذ كل المواد العلميه في سكاشن اتصالات
           </p>
           <p>
-            <img src="images/هندسه الاتصالات.jpg" alt="" class="img-fluid">
+            <img src="هندسه الاتصالات.jpg" alt="" class="img-fluid">
           </p>
         </div>
 
@@ -339,7 +339,7 @@
             مكان المحاضرات الخاص بقسم(اتصالات)
           </p>
           <p>
-            <img src="images/مدرج 4.jpeg" alt="" class="img-fluid">
+            <img src="مدرج 4.jpeg" alt="" class="img-fluid">
           </p>
         </div>
 
@@ -599,16 +599,16 @@
 
 
 
-  <script src="js/fontawesome/all.min.js"></script>
+  <script src="fontawesome/all.min.js"></script>
 
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/tiny-slider.js"></script>
-  <script src="js/glightbox.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="tiny-slider.js"></script>
+  <script src="glightbox.min.js"></script>
+  <script src="aos.js"></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="google-map.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
