--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
   <!--start font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/tiny-slider.css">
-  <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="flaticon.css">
+  <link rel="stylesheet" href="tiny-slider.css">
+  <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+  <link rel="stylesheet" href="glightbox.min.css">
+  <link rel="stylesheet" href="aos.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body,
     .ftco-footer {
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md col-xl-5 d-flex align-items-center">
         
-          <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+          <img src="institute_logo_transparent.png" width="85px" height="85px">
 
         </div>
         <div class="col-md d-flex justify-content-end align-items-center">
@@ -127,7 +127,7 @@
     </div>
   </nav>
 
-  <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+  <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-center">
@@ -151,7 +151,7 @@
         <div class="row justify-content-center">
           <div class="col-md-6 col-lg-4 d-flex">
             <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="100">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_1.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('image_1.jpg');">
               </a>
               <div class="text">
                 <p class="meta"><span><i class="fa fa-user me-1"></i>Admin</span> <span><i class="fa fa-calendar me-1"></i>Jan. 18, 2021</span> <span><a href="#"><i class="fa fa-comment me-1"></i> 3 Comments</a></span></p>
