--- a/edady.html
+++ b/edady.html
@@ -5,7 +5,7 @@
     <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
     <!--start font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/tiny-slider.css">
-    <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="tiny-slider.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="glightbox.min.css">
+    <link rel="stylesheet" href="aos.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         body,
         .ftco-footer {
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-md col-xl-5 d-flex align-items-center">
 
-                    <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+                    <img src="institute_logo_transparent.png" width="85px" height="85px">
 
                 </div>
                 <div class="col-md d-flex justify-content-end align-items-center">
@@ -178,7 +178,7 @@
         </div>
       </nav>
 
-    <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+    <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-center">
@@ -205,7 +205,7 @@
                     <h2 class="mb-3">مدرج 1 </h2>
                     <p>المدرج الاساسي للمعهد والذي تتم بداخله جميع الاحتفالات العلميه</p>
                     <p>
-                        <img src="images/مدرج1.jpeg" alt="" class="img-fluid">
+                        <img src="مدرج1.jpeg" alt="" class="img-fluid">
                     </p>
 
 
@@ -261,7 +261,7 @@
 
                     </p>
                     <p>
-                        <img src="images/معمل فيزياء.jpg" alt="" class="img-fluid">
+                        <img src="معمل فيزياء.jpg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -275,7 +275,7 @@
                         <br>
                     </p>
                     <p>
-                        <img src="images/معمل كيمياء.jpg" alt="" class="img-fluid">
+                        <img src="معمل كيمياء.jpg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -288,7 +288,7 @@
                         تدريب الطلاب أو الفنيين على المهارات العملية اللازمة للعمل في المصانع.
                     </p>
                     <p>
-                        <img src="images/الانتاج.jpeg" alt="" class="img-fluid">
+                        <img src="الانتاج.jpeg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -304,7 +304,7 @@
                         موثقة، دقيقة، وقابلة للتنفيذ.
                     </p>
                     <p>
-                        <img src="images/المعهد 3.jpeg" alt="" class="img-fluid">
+                        <img src="المعهد 3.jpeg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -562,15 +562,15 @@
 
 
 
-    <script src="js/fontawesome/all.min.js"></script>
+    <script src="fontawesome/all.min.js"></script>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/aos.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="tiny-slider.js"></script>
+    <script src="glightbox.min.js"></script>
+    <script src="aos.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="google-map.js"></script>
+    <script src="main.js"></script>
 
 </body>
