--- a/emara.html
+++ b/emara.html
@@ -5,7 +5,7 @@
     <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
     <!--start font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/tiny-slider.css">
-    <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="tiny-slider.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="glightbox.min.css">
+    <link rel="stylesheet" href="aos.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         body,
         .ftco-footer {
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-md col-xl-5 d-flex align-items-center">
 
-                    <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+                    <img src="institute_logo_transparent.png" width="85px" height="85px">
 
                 </div>
                 <div class="col-md d-flex justify-content-end align-items-center">
@@ -178,7 +178,7 @@
         </div>
       </nav>
 
-    <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+    <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-center">
@@ -203,7 +203,7 @@
                     <h2 class="mb-3">أ.د/طارق ابو عوف</h2>
                     <p>رئيس قسم المعماري</p>
                     <p>
-                        <img src="images/طارق ابو عوف.jpeg" alt="" class="img-fluid">
+                        <img src="طارق ابو عوف.jpeg" alt="" class="img-fluid">
                     </p>
                     <h4>كلمه :أ.د/طارق ابو عوف</h4>
                     <p>ينطلق قسم الهندسة المعمارية في سعيه الدؤوب نحو إعداد وتأهيل نخبة من المهندسين المعماريين
@@ -276,7 +276,7 @@
 
                     </p>
                     <p>
-                        <img src="images/صاله عماره مجهزه.jpg" alt="" class="img-fluid">
+                        <img src="صاله عماره مجهزه.jpg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -287,7 +287,7 @@
                         للتنفيذ، مما يُرسّخ الفهم العملي لأسس التصميم.
                     </p>
                     <p>
-                        <img src="images/معمل حاسبات2.jpg" alt="" class="img-fluid">
+                        <img src="معمل حاسبات2.jpg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -568,15 +568,15 @@
 
 
 
-    <script src="js/fontawesome/all.min.js"></script>
+    <script src="fontawesome/all.min.js"></script>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/aos.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="tiny-slider.js"></script>
+    <script src="glightbox.min.js"></script>
+    <script src="aos.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="google-map.js"></script>
+    <script src="main.js"></script>
 
 </body>
