--- a/madany.html
+++ b/madany.html
@@ -5,7 +5,7 @@
     <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
     <!--start font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-md col-xl-5 d-flex align-items-center">
 
-                    <img src="images/institute_logo_transparent.png" width="85px" height="85px">
+                    <img src="institute_logo_transparent.png" width="85px" height="85px">
 
                 </div>
                 <div class="col-md d-flex justify-content-end align-items-center">
@@ -178,7 +178,7 @@
         </div>
       </nav>
 
-    <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+    <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-center">
@@ -205,7 +205,7 @@
                     <h2 class="mb-3">أ.د/محمد اسماعيل</h2>
                     <p>رئيس قسم المدني</p>
                     <p>
-                        <img src="images/اسماعيل 2222.jpeg" alt="" class="img-fluid">
+                        <img src="اسماعيل 2222.jpeg" alt="" class="img-fluid">
                     </p>
                     <h4>كلمه :أ.د/محمد اسماعيل </h4>
                     <p>يهدف قسم الهندسة المدنية إلى تخريج مهندسين ذوى مهارات عالية فى تخصص الهندسة المدنية لديهم القدرة
@@ -271,7 +271,7 @@
                         يُتيح المعمل فرصة استخدام أجهزة خلط الخرسانة، وأجهزة الضغط، وأدوات .
                     </p>
                     <p>
-                        <img src="images/خرسانة.jpg " alt="" class="img-fluid">
+                        <img src="خرسانة.jpg " alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -284,7 +284,7 @@
                         عن سوء استخدام المواد أو اختيارها بشكل غير دقيق.
                     </p>
                     <p>
-                        <img src="images/سكشن مدني.jpeg" alt="" class="img-fluid">
+                        <img src="سكشن مدني.jpeg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -299,7 +299,7 @@
                         مشروع هندسي.
                     </p>
                     <p>
-                        <img src="images/سكشن مدني.jpeg" alt="" class="img-fluid">
+                        <img src="سكشن مدني.jpeg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -332,7 +332,7 @@
                         الرسم الهندسي يتطلب دقة عالية وتنظيم، وهي صفات يكتسبها الطالب من خلال التدريب المتكرر في الصالة.
                     </p>
                     <p>
-                        <img src="images/صاله رسم مجهزه.jpeg" alt="" class="img-fluid">
+                        <img src="صاله رسم مجهزه.jpeg" alt="" class="img-fluid">
                     </p>
                 </div>
 
@@ -347,7 +347,7 @@
                     <h2 class="mb-3">c2</h2>
                     <p>مكان للسكاشن الخاص بالقسم</p>
                     <p>
-                        <img src="images/c2.jpeg" alt="" class="img-fluid">
+                        <img src="c2.jpeg" alt="" class="img-fluid">
                     </p>
                 </div>
             </div>
@@ -615,15 +615,15 @@
 
 
 
-    <script src="js/fontawesome/all.min.js"></script>
+    <script src="fontawesome/all.min.js"></script>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/aos.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="tiny-slider.js"></script>
+    <script src="glightbox.min.js"></script>
+    <script src="aos.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="google-map.js"></script>
+    <script src="main.js"></script>
 
 </body>
