--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <title>المعهد العالي للهندسه والتكنولوجيا بالمنزله</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="images/images.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="images.jpg" type="x-icon">
 
   <!--start font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/tiny-slider.css">
-  <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-  <link rel="stylesheet" href="css/glightbox.min.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="flaticon.css">
+  <link rel="stylesheet" href="tiny-slider.css">
+  <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+  <link rel="stylesheet" href="glightbox.min.css">
+  <link rel="stylesheet" href="aos.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body,
     .ftco-footer {
@@ -127,7 +127,7 @@
     </div>
   </nav>
 
-  <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+  <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-center">
