--- a/madany.html
+++ b/madany.html
@@ -15,13 +15,13 @@
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/tiny-slider.css">
-    <link rel="stylesheet" href="fonts/fontawesome-free-6.4.2-web/css/all.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="tiny-slider.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="glightbox.min.css">
+    <link rel="stylesheet" href="aos.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         body,
         .ftco-footer {
