--- a/blog-single.html
+++ b/blog-single.html
@@ -177,7 +177,7 @@
     </div>
   </nav>
 
-  <section class="hero-wrap" style="background-image: url('images/elkolya.jpg');">
+  <section class="hero-wrap" style="background-image: url('elkolya.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-center">
