--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="flaticon.css">
   <link rel="stylesheet" href="tiny-slider.css">
-  <link rel="stylesheet" href="all.css">
-  <link rel="stylesheet" href="flaticon.css">
+  <link rel="stylesheet" href="">
   <link rel="stylesheet" href="glightbox.min.css">
   <link rel="stylesheet" href="aos.css">
   <link rel="stylesheet" href="style.css">
