--- a/madany.html
+++ b/madany.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="flaticon.css">
     <link rel="stylesheet" href="tiny-slider.css">
-    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="glightbox.min.css">
     <link rel="stylesheet" href="aos.css">
     <link rel="stylesheet" href="style.css">
