--- a/courses.html
+++ b/courses.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="flaticon.css">
   <link rel="stylesheet" href="tiny-slider.css">
-  <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+  <link rel="stylesheet" href="all.css">
   <link rel="stylesheet" href="glightbox.min.css">
   <link rel="stylesheet" href="aos.css">
   <link rel="stylesheet" href="style.css">
@@ -228,7 +228,7 @@
         <div class="col-md-6 col-lg-4 d-flex">
           <div class="blog-entry justify-content-end" data-aos="flip-right" data-aos-duration="1000"
             data-aos-delay="100">
-            <a href="blog-single.html" class="block-20 img" style="background-image: url('علي\سمير\3.jpeg');">
+            <a href="blog-single.html" class="block-20 img" style="background-image: url('علي سمير 3.jpeg');">
             </a>
             <div class="text">
               <h4 class=" meta "><span> كلمة الوكيل</span></h4>
