--- a/activity.html
+++ b/activity.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="flaticon.css">
     <link rel="stylesheet" href="tiny-slider.css">
-    <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="glightbox.min.css">
     <link rel="stylesheet" href="aos.css">
     <link rel="stylesheet" href="style.css">
@@ -257,7 +257,7 @@
 
                 <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="staff">
-                        <div class="img" style="background-image: url(images/بورتو.jpg);">
+                        <div class="img" style="background-image: url(بورتو.jpg);">
 
 
                         </div>
