--- a/blog.html
+++ b/blog.html
@@ -342,15 +342,15 @@
   
   
   
-    <script src="js/fontawesome/all.min.js"></script>
+    <script src="all.min.js"></script>
   
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/aos.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="tiny-slider.js"></script>
+    <script src="glightbox.min.js"></script>
+    <script src="aos.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="google-map.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
