--- a/team.html
+++ b/team.html
@@ -288,7 +288,7 @@
   </footer>
   
     
-    <script src="fontawesome/all.min.js"></script>
+    <script src="all.min.js"></script>
 
     <script src="bootstrap.bundle.min.js"></script>
     <script src="tiny-slider.js"></script>
