--- a/emara.html
+++ b/emara.html
@@ -568,7 +568,7 @@
 
 
 
-    <script src="fontawesome/all.min.js"></script>
+    <script src="all.min.js"></script>
 
     <script src="bootstrap.bundle.min.js"></script>
     <script src="tiny-slider.js"></script>
