--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="row g-xl-5">
         <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100"
           data-aos-duration="1000">
-          <div class="img w-100 "
+          <div class="img w-100 col-md-12  "
             style="background-image: url(WhatsApp\ Image\ 2025-05-01\ at\ 2.39.09\ AM.jpeg);">
 
           </div>
@@ -214,7 +214,7 @@
     </div>
   </section>
 
-  <section class="ftco-section-counter img"
+  <section class="col-md-12  ftco-section-counter img"
     style="background-image: url(f1697fab-6c5a-4b51-bfcc-692f2de79632.jpg);">
     <div class="overlay"></div>
     <div class="container">
