--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
   <!--end font -->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="all.min.css">
   <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="flaticon.css">
   <link rel="stylesheet" href="tiny-slider.css">
