--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
 
 
-
+  <script src="fontawesome"></script>
   <script src="all.min.js"></script>
 
   <script src="bootstrap.bundle.min.js"></script>
